-Fix for desktop language selector (nav overflow fix)

--- a/dev/scss/partial/_nav.scss
+++ b/dev/scss/partial/_nav.scss
@@ -68,6 +68,7 @@ nav {
 		font-size: 1.25em;
 		width: 20%;
 		margin-left: 1%;
+		overflow: visible;
 
 		.emblem-wrapper {
 			padding: 3em;
